# tetrendering

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  muscle_app.cpp  muscle_app.h  triangulate_tets.cpp  triangulate_tets.h
data/: cylinder.mesh  temp.mesh
minityro/: RAEnginePrerequisites.h
minityro/Core/: CMakeSources.cmake  RACamera.cpp  RACamera.h  RAFileManager.cpp  RAFileManager.h  RALogManager.h  RAMath.cpp  RAMath.h  RATextureBuffer.cpp  RATextureBuffer.h  RAiOSCamera.cpp  RAiOSCamera.h
minityro/Core/ES2/: RAES2BufferTexture.cpp  RAES2BufferTexture.h  RAES2CoreVisualEffects.cpp  RAES2CoreVisualEffects.h  RAES2Polypoint.h  RAES2Renderable.cpp  RAES2Renderable.h  RAES2Renderer.cpp  RAES2Texture2D.cpp  RAES2Texture2D.h  RAES2TriMesh.cpp  RAES2TriMesh.h  RAES2VertexHardwareBuffer.cpp  RAES2VisualEffect.h
minityro/Core/Scene/: RASpatial.cpp  RASpatial.h
minityro/Engine/: CMakeSources.cmake  TyroIGLMesh.cpp  TyroIGLMesh.h  TyroWindow.cpp  TyroWindow.h
minityro/Math/: CMakeLists.txt  CMakeSources.cmake  Wm5Core.h  Wm5Mathematics.h
minityro/Math/Algebra/: Wm5APoint.cpp  Wm5APoint.h  Wm5APoint.inl  Wm5AVector.cpp  Wm5AVector.h  Wm5AVector.inl  Wm5HQuaternion.h  Wm5Math.h  Wm5Matrix3.h  Wm5Matrix3.inl
minityro/Shaders/: Muscle.fs  Muscle.vs  Muscle2.fs  TetMeshSlice.fs  TetMeshSlice.vs  WireframeColor.vsh  WireframeSlice.fs  WireframeSlice.vs  anchor.fs  anchor.vs  bone.fs  bone.vs  matcap.fs  matcap.vs  mesh_slice.fs  mesh_slice.vs
renderables/: musclemesh.cpp  musclemesh.h  slicemesh.cpp  slicemesh.h  tetmesh.cpp  tetmesh.h
scripts/: setupmkl.sh
utils/: boundary_verticies.cpp  boundary_verticies.h  color_matrix.h  compare_vectors.cpp  compare_vectors.h
